# Posture-Sentinel

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml  config.yaml  environment_checks.py  main.py  performance_reporting.py  posture_quality_reporting.py  reporting.py  requirements.txt  tuning.py
.memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
docs/: IMPLEMENTATION_PLAN.md  PERF_REPORTING.md  PRD.md  README.md  SETUP_AND_RUN.md  TEST_PLAN.md
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: camera.rs  config.rs  inference.rs  main.rs  overlay.rs  posture.rs
tests/: test_environment_checks.py  test_main_runtime.py  test_perf_report_cli.py  test_performance_reporting.py  test_posture_quality_reporting.py  test_quality_report_cli.py  test_reporting.py  test_tuning.py
tools/: bootstrap.ps1  check_env.py  perf_report.py  quality_report.py  report.py  run.ps1  run_tests.ps1  smoke_test.ps1  tune.py
