[package]
name = "ai-posture-sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.92", features = ["clang-runtime"] }
ort = { version = "2.0.0-rc.11", features = ["cuda"] }
winit = "0.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
